# CDMS-Agent

./: .gitignore  CLAUDE.md  README.md  SKILL.md  package.json  pyproject.toml
docs/: cdm_agent_client.md  cdms_agent_client.html  crf_package.html  crf_reviewer.html  daemon_connection.html  harness_engineering.html
docs/dev.report/: 260526_01_CRF_자동화_기반_업데이트_보고서.html  260527_00_보고서_목록.html  260527_01_Browser_Assisted_하네스_업데이트_보고서.html  260527_02_CRF_Doctor_Static_Diagnostics_보고서.html  260527_03_Browser_Inspect_Row_State_하네스_보고서.html  260527_04_Notebook_Generation_Query_Check_보고서.html  260527_05_Cleanup_Documentation_보고서.html  260527_06_Notebook_Query_Check_제거_보고서.html  260527_07_쿼리_합계_제거_v034_진행_및_구조_평가_보고서.html  260527_08_stop_on_error_제거_v035_생성_보고서.html  260527_09_row_text_기반_현재페이지_입력전용_생성_보고서.html  260527_10_row_trigger_state_자동_skip_및_v037_생성_보고서.html  260527_11_browser_assisted_input_harness_목표정리_보고서.html  260527_12_structured_rows_보강_v041_생성_보고서.html  260528_01_DVS_문서업무_대체를_위한_열_구성_전환_보고서.html  260528_02_Discovery_Loop_작동_순서_보고서.html  260528_03_Rule_Discovery_매칭_우선순위_및_코드배치_보고서.html  260529_01_Rule_Discovery_결과판정_로직_수정_보고서.html  (+11 more)
extension/: browser-runner-core.js  content-script.js  manifest.json  service-worker.js  sidepanel.css  sidepanel.html  sidepanel.js
notebooks/: quickstart.ipynb  trigger_automation_poc.ipynb
src/cdm_agent_client/: __init__.py  (+3 more)
tests/: test_audit.py  test_availability_discovery.py  test_candidate_prerequisites.py  test_candidate_taxonomy.py  test_doctor.py  test_overrides.py  test_rule_discovery_runtime.py  test_trigger_matcher.py
(+38 files in other folders)
