[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdm-agent-client"
version = "0.1.0"
description = "Python client for the CDM Agent daemon — control a CDMS browser session from Jupyter or scripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
jupyter = [
    "ipython>=7.0",
    "notebook>=6.0",
]
dev = [
    "pytest",
    "ipython",
    "notebook",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cdm_agent_client"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/notebooks", "/README.md"]
