[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdm-agent-client"
version = "0.1.0"
description = "Python client for the CDM Agent daemon — control a CDMS browser session from Jupyter or scripts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
cdms-crf-notebook = "cdm_agent_client.crf.cli:main"
cdms-crf = "cdm_agent_client.crf.__main__:main"

[project.optional-dependencies]
jupyter = [
    "ipython>=7.0",
    "notebook>=6.0",
]
dvs = [
    "openpyxl>=3.1",
]
dev = [
    "pytest",
    "ipython",
    "notebook",
    "openpyxl>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cdm_agent_client"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/notebooks", "/README.md"]
